--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+    <h1>Civic Symphony Association of SF Membership Management System</h1>
+    <%= link_to 'Home Page', root_path %><br><br>
     <%= yield %>
   </body>
 </html>
