--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,27 @@
   </head>
 
   <body>
-    <h1>Civic Symphony Association of SF Membership Management System</h1>
-    <%= link_to 'Home Page', root_path %><br><br>
-    <%= yield %>
+    <h1><%= link_to 'Civic Symphony Association of SF Membership Management System', root_path %></h1>
+    <div class='bar'>
+      <%= link_to 'Home Page', root_path %> &middot;
+      <% if user_signed_in? %>
+        Logged in as <%= current_user.email %>
+      <% else %>
+        Not logged in. <%= link_to "Log In", new_user_session_path %>
+      <% end %>
+    </div>
+    <% flash.each do |key, value| %>
+      <div class="alert alert-<%= key %>">
+        <a href="#" data-dismiss="alert" class="close">×</a>
+        <ul>
+          <li>
+            <%= value %>
+          </li>
+        </ul>
+      </div>
+    <% end %>
+    <div class='body'>
+      <%= yield %>
+    </div>
   </body>
 </html>
