--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Member</h1>
+<div class='pageHeader'><h2>New Member</h2></div>
+
+<div class='formDescription'>Add a new member. This member may or not be performing with any groups at this time; this can be changed later.</div>
 
 <%= render 'form', member: @member %>
 
-<%= link_to 'Back', members_path %>
+<%= link_to 'Cancel', members_path %>
