--- a/app/views/performance_sets/new.html.erb
+++ b/app/views/performance_sets/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', performance_set: @performance_set %>
 
-<%= link_to 'Back', performance_sets_path %>
+<%= link_to 'Cancel', performance_sets_path %>
