--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,18 @@ h1 a {
   color: black;
 }
 
+div.pageHeader {
+  background: #ccbbcc;
+  margin-top: 0;
+  margin-bottom: 10px;
+  padding: 15px 10px;
+}
+
+h2 {
+  display: inline;
+
+}
+
 div.bar {
   background: #ccddcc;
   padding: 5px;
@@ -34,6 +46,22 @@ div.bar {
 
 div.body {
   padding: 25px;
+}
+
+div.formDescription {
+  background: #bbccbb;
+  margin: 0;
+  padding: 12px 10px;
+  font-style: italic;
+}
+
+div.inlineField {
+  display: inline-block;
+}
+
+div.actions input[type=submit] {
+  font-size: 16px;
+  font-weight: bold;
 }
 
 p, ol, ul, td {
@@ -71,7 +99,7 @@ td {
 
 div {
   &.field, &.actions {
-    margin-bottom: 10px;
+    margin-top: 5px;
   }
 }
 
@@ -83,6 +111,31 @@ div {
   padding: 2px;
   background-color: red;
   display: table;
+}
+
+.alert {
+  width: 500px;
+  background: #ffff99;
+  margin: 25px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 1px 1px 1px #ccc;
+  ul {
+    margin: 5px;
+    list-style-type: none;
+    padding: 5px;
+  }
+}
+
+.close {
+  float: right;
+  padding: 8px;
+  font-size: 24px;
+  &:hover {
+    text-decoration: none;
+    background: black;
+    color: white;
+  }
 }
 
 #error_explanation {
