--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,36 @@
 
 <% if user_signed_in? %>
-  <b>Common Actions:</b>
+  <b>Members</b>
   <br><br>
   <%= link_to 'Add New Member', new_member_path %><br>
   <%= link_to 'View Member List', members_path %>
+
+  <br><br>
+  <b>Ensembles</b>
+  <br><br>
+  <%= link_to 'View Ensemble List', ensembles_path %>
+
+  <br><br>
+  <b>Sets</b>
+  <br><br>
+  <%= link_to 'Add New Performance Set', new_performance_set_path %><br>
+  <%= link_to 'View Performance Set List', performance_sets_path %>
+
+  <br><br>
+  <b>Absences</b>
+  <br><br>
+  <%= link_to 'Add New Absence', new_absence_path %><br>
+  <%= link_to 'View Absences List', absences_path %>
+
+  <br><br>
+  <b>Audit Trail</b>
+  <br><br>
+  <%= link_to 'View Action Log List', action_logs_path %>
+
+  <br><br>
+  <b>Users</b>
+  <br><br>
+
 <% else %>
   Hello! Please <%= link_to "Log In", new_user_session_path %>
 
