--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -11,90 +11,134 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %>
-  </div>
+  <table>
+    <tr>
+      <td>
+        <div class="field">
+          <%= f.label :first_name, "First Name" %>
+          <%= f.text_field :first_name %>
+        </div>
+      </td>
+      <td>
+        <div class="field">
+          <%= f.label :last_name, "Last Name" %>
+          <%= f.text_field :last_name %>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <div class="field">
+          <%= f.label :address_1, "Address Row 1" %>
+          <%= f.text_field :address_1 %>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <div class="field">
+          <%= f.label :address_2, "Address Row 2" %>
+          <%= f.text_field :address_2 %>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <div class="field">
+          <%= f.label :city %>
+          <%= f.text_field :city %>
+        </div>
+      </td>
+      <td>
 
-  <div class="field">
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %>
-  </div>
+        <div class="field inlineField">
+          <%= f.label :state %>
+          <%= f.select :state, options_for_select(us_states, selected: 'CA') %>
+        </div>
 
-  <div class="field">
-    <%= f.label :address_1 %>
-    <%= f.text_field :address_1 %>
-  </div>
+        <div class="field inlineField">
+          <%= f.label :zip %>
+          <%= f.text_field :zip, size: 5 %>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <div class="field">
+          <%= f.label :phone_1, "Primary Phone" %>
+          <%= f.text_field :phone_1 %>
+        </div>
+      </td>
+      <td>
 
-  <div class="field">
-    <%= f.label :address_2 %>
-    <%= f.text_field :address_2 %>
-  </div>
+        <div class="field">
+          <%= f.label :phone_1_type, "Primary Phone Type" %>
+          <%= f.select :phone_1_type, ['', 'Cell Phone', 'Home', 'Business', 'Other'] %>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <div class="field">
+          <%= f.label :phone_2, "Secondary Phone" %>
+          <%= f.text_field :phone_2 %>
+        </div>
+      </td>
+      <td>
+        <div class="field">
+          <%= f.label :phone_2_type, "Secondary Phone Type" %>
+          <%= f.select :phone_2_type, ['', 'Cell Phone', 'Home', 'Business', 'Other'] %>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <div class="field">
+          <%= f.label :email_1, "Primary Email Address" %>
+          <%= f.text_field :email_1 %>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <div class="field">
+          <%= f.label :email_2, "Secondary Email Address" %>
+          <%= f.text_field :email_2 %>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td>
 
-  <div class="field">
-    <%= f.label :city %>
-    <%= f.text_field :city %>
-  </div>
 
-  <div class="field">
-    <%= f.label :state %>
-    <%= f.text_field :state %>
-  </div>
+        <div class="field">
+          <b>Emergency Contact Information</b><br>
+          <%= f.label :emergency_name, "Name" %>
+          <%= f.text_field :emergency_name %>
+        </div>
+      </td>
+      <td>
+        <br>
+        <div class="field inlineField">
+          <%= f.label :emergency_relation, "Relationship to Member" %>
+          <%= f.text_field :emergency_relation %>
+        </div>
+        <div class="field inlineField">
+          <%= f.label :emergency_phone, "Phone Number" %>
+          <%= f.text_field :emergency_phone %>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td>
 
-  <div class="field">
-    <%= f.label :zip %>
-    <%= f.text_field :zip %>
-  </div>
 
-  <div class="field">
-    <%= f.label :phone_1 %>
-    <%= f.text_field :phone_1 %>
-  </div>
+      </td>
+    </tr>
+  </table>
 
-  <div class="field">
-    <%= f.label :phone_1_type %>
-    <%= f.text_field :phone_1_type %>
-  </div>
-
-  <div class="field">
-    <%= f.label :phone_2 %>
-    <%= f.text_field :phone_2 %>
-  </div>
-
-  <div class="field">
-    <%= f.label :phone_2_type %>
-    <%= f.text_field :phone_2_type %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email_1 %>
-    <%= f.text_field :email_1 %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email_2 %>
-    <%= f.text_field :email_2 %>
-  </div>
-
-  <div class="field">
-    <%= f.label :emergency_name %>
-    <%= f.text_field :emergency_name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :emergency_relation %>
-    <%= f.text_field :emergency_relation %>
-  </div>
-
-  <div class="field">
-    <%= f.label :emergency_phone %>
-    <%= f.text_field :emergency_phone %>
-  </div>
-
-  <div class="field">
-    <%= f.label :playing_status %>
-    <%= f.text_field :playing_status %>
-  </div>
+  <div class='formDescription'>Instrument, playing status, and performance group participation are not set on this page ... yet</div>
+<br><br>
 
   <div class="actions">
     <%= f.submit %>
