--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,59 +1,16 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Members</h1>
+<div class='pageHeader'><h2>Members</h2> &emsp; <%= link_to 'Add New Member', new_member_path %></div>
 
 <table>
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Address 1</th>
-      <th>Address 2</th>
-      <th>City</th>
-      <th>State</th>
-      <th>Zip</th>
-      <th>Phone 1</th>
-      <th>Phone 1 type</th>
-      <th>Phone 2</th>
-      <th>Phone 2 type</th>
-      <th>Email 1</th>
-      <th>Email 2</th>
-      <th>Emergency name</th>
-      <th>Emergency relation</th>
-      <th>Emergency phone</th>
-      <th>Playing status</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
   <tbody>
     <% @members.each do |member| %>
       <tr>
-        <td><%= member.first_name %></td>
-        <td><%= member.last_name %></td>
-        <td><%= member.address_1 %></td>
-        <td><%= member.address_2 %></td>
-        <td><%= member.city %></td>
-        <td><%= member.state %></td>
-        <td><%= member.zip %></td>
-        <td><%= member.phone_1 %></td>
-        <td><%= member.phone_1_type %></td>
-        <td><%= member.phone_2 %></td>
-        <td><%= member.phone_2_type %></td>
-        <td><%= member.email_1 %></td>
-        <td><%= member.email_2 %></td>
-        <td><%= member.emergency_name %></td>
-        <td><%= member.emergency_relation %></td>
-        <td><%= member.emergency_phone %></td>
-        <td><%= member.playing_status %></td>
-        <td><%= link_to 'Show', member %></td>
+        <td><%= link_to "#{member.first_name} #{member.last_name}", member %></td>
         <td><%= link_to 'Edit', edit_member_path(member) %></td>
-        <td><%= link_to 'Destroy', member, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Member', new_member_path %>
