--- a/app/views/performance_sets/edit.html.erb
+++ b/app/views/performance_sets/edit.html.erb
@@ -3,3 +3,5 @@
 <%= render 'form', performance_set: @performance_set %>
 
 <%= link_to 'Cancel', performance_sets_path %>
+<br><br>
+<%= link_to 'Delete Performance Set', performance_set, method: :delete, data: { confirm: 'Are you sure you want to delete this set?' } %>
