--- a/app/views/performance_sets/index.html.erb
+++ b/app/views/performance_sets/index.html.erb
@@ -5,22 +5,14 @@
 <table>
   <thead>
     <tr>
-      <th>Ensemble</th>
-      <th>Start date</th>
-      <th>End date</th>
-      <th colspan="3"></th>
+      <th>Set</th>
     </tr>
   </thead>
 
   <tbody>
     <% @performance_sets.each do |performance_set| %>
       <tr>
-        <td><%= Ensemble.find(performance_set.ensemble_id).name %></td>
-        <td><%= performance_set.start_date %></td>
-        <td><%= performance_set.end_date %></td>
-        <td><%= link_to 'Show', performance_set %></td>
-        <td><%= link_to 'Edit', edit_performance_set_path(performance_set) %></td>
-        <td><%= link_to 'Destroy', performance_set, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to "#{Ensemble.find(performance_set.ensemble_id).name} from #{performance_set.start_date} to #{performance_set.end_date}", performance_set %></td>
       </tr>
     <% end %>
   </tbody>
