--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(member) do |f| %>
+<%= form_for(@member) do |f| %>
   <% if member.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(member.errors.count, "error") %> prohibited this member from being saved:</h2>
@@ -136,6 +136,13 @@
       </td>
     </tr>
   </table>
+
+  <%= f.fields_for @member_instrument do |instrument_f| %>
+    <div class="field inlineField">
+      <%= instrument_f.label :instrument, "Instrument" %>
+      <%= instrument_f.text_field :instrument %>
+    </div>
+  <% end %>
 
   <div class='formDescription'>Instrument, playing status, and performance group participation are not set on this page ... yet</div>
 <br><br>
