--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@member) do |f| %>
+<%= form_for setup_member_instruments(@member) do |f| %>
   <% if member.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(member.errors.count, "error") %> prohibited this member from being saved:</h2>
@@ -137,7 +137,7 @@
     </tr>
   </table>
 
-  <%= f.fields_for @member_instruments do |instrument_f| %>
+  <%= f.fields_for :member_instruments do |instrument_f| %>
     <div class="field inlineField">
       <%= instrument_f.label :instrument, "Instrument" %>
       <%= instrument_f.text_field :instrument %>
