Tighten up authentication; remove duplicate notices; minor improvements to performance sets

--- a/app/views/performance_sets/edit.html.erb
+++ b/app/views/performance_sets/edit.html.erb
@@ -4,4 +4,4 @@
 
 <%= link_to 'Cancel', performance_sets_path %>
 <br><br>
-<%= link_to 'Delete Performance Set', performance_set, method: :delete, data: { confirm: 'Are you sure you want to delete this set?' } %>
+<%= link_to 'Delete Performance Set', @performance_set, method: :delete, data: { confirm: 'Are you sure you want to delete this set?' } %>
