--- a/app/views/performance_sets/show.html.erb
+++ b/app/views/performance_sets/show.html.erb
@@ -13,5 +13,6 @@
   <%= @performance_set.end_date %>
 </p>
 
-<%= link_to 'Edit', edit_performance_set_path(@performance_set) %> |
-<%= link_to 'Back', performance_sets_path %>
+<%= link_to 'Edit', edit_performance_set_path(@performance_set) %>
+<br><br>
+<%= link_to 'View All Performance Sets', performance_sets_path %>
