--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,6 +21,11 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
+  <div class='field'>
+    <%= captcha_tag %>
+    <%= text_field_tag :captcha %>
+  </div>
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
