Usability updates for ensembles and performance sets

--- a/app/views/ensembles/_form.html.erb
+++ b/app/views/ensembles/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= f.label :description %>
-    <%= f.text_field :description %>
+    <%= f.text_field :description, size: 80 %>
   </div>
 
   <div class="actions">
