--- a/app/views/performance_sets/_form.html.erb
+++ b/app/views/performance_sets/_form.html.erb
@@ -19,7 +19,7 @@
 
   <div class="field">
     <%= f.label :name, "Name of Set (Must contain a year to disambiguate from other sets)" %>
-    <%= date_field :performance_set, :name %>
+    <%= f.text_field :name %>
   </div>
 
   <div class="field">
