--- a/app/views/ensembles/edit.html.erb
+++ b/app/views/ensembles/edit.html.erb
@@ -1,6 +1,5 @@
 <h1>Editing Ensemble</h1>
 
 <%= render 'form', ensemble: @ensemble %>
-
-<%= link_to 'Show', @ensemble %> |
-<%= link_to 'Back', ensembles_path %>
+<br>
+<%= link_to 'Cancel', ensembles_path %>
