--- a/app/views/ensembles/new.html.erb
+++ b/app/views/ensembles/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Ensemble</h1>
 
 <%= render 'form', ensemble: @ensemble %>
-
-<%= link_to 'Back', ensembles_path %>
+<br>
+<%= link_to 'Cancel', ensembles_path %>
