--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -112,6 +112,47 @@ div {
   padding-top: 5px;
 }
 
+.modal {
+  position: fixed;
+  top: 0px;
+  margin-left: 20%;
+  width: 60%;
+  background: #ffffee;
+  padding: 20px;
+  margin-top: 30px;
+  box-shadow: 2px 2px 5px black;
+  border-radius: 20px;
+  display: none;
+  padding-left: 40px;
+}
+
+.modal h3, .modal h2 {
+  margin-left: -20px;
+}
+
+.modal h2 {
+  text-decoration: underline;
+}
+
+.modal .closeHelp {
+  display: inline-block;
+  margin-left: 25px;
+  color: gray;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+#playerStatusModalOpener, #setStatusModalOpener {
+  padding: 5px;
+  background: darkblue;
+  color: white;
+  cursor: pointer;
+  border-radius: 10px;
+  box-shadow: 1px 1px 1px black;
+}
+
+
+
 #notice {
   color: green;
 }
