Fix instruments and sets

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -120,8 +120,9 @@ div {
   background: #ffffee;
   padding: 20px;
   margin-top: 30px;
-  box-shadow: 2px 2px 5px black;
-  border-radius: 20px;
+  box-shadow: 1px 1px 3px black;
+  border-radius: 5px;
+  border: 1px solid #999;
   display: none;
   padding-left: 40px;
 }
